# character-chat-cli

./: .gitignore  Cargo.toml  LICENSE  PLUGIN.md  README.md  install.sh  run.sh  uninstall.sh
packaging/: PACKAGING.txt  docker-build-linux.sh  package-linux.sh  setup.iss
personas/: 雌小鬼人设.txt
src/: api.rs  cli.rs  config.rs  main.rs  memory.rs  persona.rs  plugin.rs  tts.rs
src/onebot/: bot.rs  mod.rs  server.rs  types.rs
src/plugins/: mod.rs
src/qq/: api.rs  bot.rs  config_tui.rs  mod.rs  types.rs  ws.rs
src/wechat/: api.rs  auth.rs  bot.rs  mod.rs  types.rs
