[package]
name = "character-chat-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
image = "0.25"
log = "0.4"
env_logger = "0.11"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
base64 = "0.22"
rand = "0.8"
rodio = "0.20"
hound = "3.5"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
reedline = "0.37"
nu-ansi-term = "0.50"
ratatui = "0.29"
crossterm = "0.28"
libloading = "0.8"
